[package]
name = "rs-meter"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["image"] }
env_logger = "0.11.8"
int-enum = "1.2.0"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
serialport = "4.7.2"
image = { version = "0.25", features = ["png"] }
